--- a/dynatrace-operator/templates/Common/Routing/role-routing.yaml
+++ b/dynatrace-operator/templates/Common/Routing/role-routing.yaml
@@ -13,34 +13,17 @@
 # limitations under the License.
 
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
+kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
 metadata:
-  name: dynatrace-kubernetes-monitoring
-  labels:
-    {{- include "dynatrace-operator.labels" . | nindent 4 }}
+  name: dynatrace-routing
+  namespace: {{ .Release.Namespace }}
 rules:
   - apiGroups:
-      - ""
-      - batch
-      - apps
-      - apps.openshift.io
+      - policy
     resources:
-      - nodes
-      - pods
-      - namespaces
-      - deployments
-      - replicasets
-      - deploymentconfigs
-      - replicationcontrollers
-      - jobs
-      - cronjobs
-      - statefulsets
-      - daemonsets
-      - events
-      - resourcequotas
-      - pods/proxy
+      - podsecuritypolicies
+    resourceNames:
+      - dynatrace-routing
     verbs:
-      - list
-      - watch
-      - get
+      - use
