--- a/dynatrace-operator/templates/Common/Routing/serviceaccount-routing.yaml
+++ b/dynatrace-operator/templates/Common/Routing/serviceaccount-routing.yaml
@@ -13,34 +13,10 @@
 # limitations under the License.
 
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
+apiVersion: v1
+kind: ServiceAccount
 metadata:
-  name: dynatrace-kubernetes-monitoring
+  name: dynatrace-routing
+  namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "dynatrace-operator.labels" . | nindent 4 }}
-rules:
-  - apiGroups:
-      - ""
-      - batch
-      - apps
-      - apps.openshift.io
-    resources:
-      - nodes
-      - pods
-      - namespaces
-      - deployments
-      - replicasets
-      - deploymentconfigs
-      - replicationcontrollers
-      - jobs
-      - cronjobs
-      - statefulsets
-      - daemonsets
-      - events
-      - resourcequotas
-      - pods/proxy
-    verbs:
-      - list
-      - watch
-      - get
+  {{- include "dynatrace-operator.labels" . | nindent 4 }}
