Update KubeMon role to allow internal monitoring (#88)
* Update KubeMon role to allow internal monitoring

--- a/dynatrace-operator/templates/Common/KubernetesMonitoring/clusterrole-kubernetes-monitoring.yaml
+++ b/dynatrace-operator/templates/Common/KubernetesMonitoring/clusterrole-kubernetes-monitoring.yaml
@@ -25,6 +25,7 @@ rules:
       - batch
       - apps
       - apps.openshift.io
+      - config.openshift.io
     resources:
       - nodes
       - pods
@@ -40,7 +41,14 @@ rules:
       - events
       - resourcequotas
       - pods/proxy
+      - nodes/proxy
+      - services
+      - clusterversions
     verbs:
       - list
       - watch
+      - get
+  - nonResourceURLs:
+      - /metrics
+    verbs:
       - get
