--- a/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/configmap.yaml
+++ b/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/configmap.yaml
@@ -305,6 +305,12 @@ data:
     metadata:
       annotations:
         controller-gen.kubebuilder.io/version: v0.3.0
+      ownerReferences:
+        - apiVersion: v1beta1
+          blockOwnerDeletion: true
+          kind: Application
+          name: {{ .Release.Name }}
+          uid: ##UID##
       creationTimestamp: null
       name: dynakubes.dynatrace.com
     spec:
@@ -2215,7 +2221,7 @@ data:
                       type: integer
                   type: object
                 kubernetesMonitoring:
-                  description: ' Configuration for Kubernetes Monitoring'
+                  description: 'Configuration for Kubernetes Monitoring'
                   properties:
                     args:
                       description: 'Optional: Adds additional arguments for the ActiveGate
@@ -2450,7 +2456,7 @@ data:
                       type: string
                   type: object
                 routing:
-                  description: ' Configuration for Routing'
+                  description: 'Configuration for Routing'
                   properties:
                     args:
                       description: 'Optional: Adds additional arguments for the ActiveGate
