Enable classicFullStack by default for GKE

--- a/dynatrace-operator-google-marketplace/chart/dynatrace-operator/values.yaml
+++ b/dynatrace-operator-google-marketplace/chart/dynatrace-operator/values.yaml
@@ -46,7 +46,7 @@ oneAgent:
   autoUpdate: true
 
 classicFullStack:
-  enabled: false
+  enabled: true
   nodeSelector: { }
   tolerations: [ ]
   waitReadySeconds: 300
