--- a/dynatrace-operator/templates/Common/customresource-dynakube.yaml
+++ b/dynatrace-operator/templates/Common/customresource-dynakube.yaml
@@ -56,6 +56,22 @@ spec:
     version: {{ .Values.oneAgent.version }}
     {{- end }}
 
+  {{- if .Values.codeModules.enabled }}
+  codeModules:
+    enabled: true
+
+    {{- if .Values.codeModules.resources }}
+    resources: {{ .Values.codeModules.resources | toYaml | nindent 8 }}
+    {{- end }}
+
+    {{- if .Values.codeModules.volume }}
+    volume: {{ .Values.codeModules.volume | toYaml | nindent 8 }}
+    {{- end }}
+
+    {{- if .Values.codeModules.selector }}
+    selector: {{ .Values.codeModules.selector | toYaml | nindent 8}}
+    {{- end }}
+  {{- end }}
 
   {{- if .Values.infraMonitoring.enabled }}
   infraMonitoring:
