--- a/dynatrace-operator/questions.yml
+++ b/dynatrace-operator/questions.yml
@@ -78,7 +78,7 @@ questions:
     default: true
     type: boolean
     group: "Code Modules"
-    show_subquestion_if: true
+    show_subquestion_if: "codeModules.enabled=true"
     subquestions:
       - variable: codeModules.volume
         label: "Volume from where to get the OneAgent binary from"
@@ -88,29 +88,22 @@ questions:
         label: "Selector to define namespaces to monitor"
         description: "Defines a Kubernetes Label Selector which is used to decide which namespaces are monitored - Please edit as Yaml for the best experience"
         type: string
-      - variable: codemodules_use_custom_limits_settings
-        label: "Use custom limits settings"
-        description: "Use custom resource limits for the Dynatrace OneAgent"
-        default: false
-        type: boolean
-        show_subquestion_if: true
-        subquestions:
-          - variable: codeModules.resources.requests.cpu
-            label: "CPU resource request"
-            description: "Defines the minimum requested CPU by the OneAgent"
-            type: string
-          - variable: codeModules.resources.requests.memory
-            label: "Memory resource request"
-            description: "Defines the minimum requested memory by the OneAgent"
-            type: string
-          - variable: codeModules.resources.limits.cpu
-            label: "CPU resource limits"
-            description: "Defines the maximum provided CPU for the OneAgent"
-            type: string
-          - variable: codeModules.resources.limits.memory
-            label: "Memory resource limits"
-            description: "Defines the maximum provided memory for the OneAgent"
-            type: string
+      - variable: codeModules.resources.requests.cpu
+        label: "CPU resource request"
+        description: "Defines the minimum requested CPU by the OneAgent"
+        type: string
+      - variable: codeModules.resources.requests.memory
+        label: "Memory resource request"
+        description: "Defines the minimum requested memory by the OneAgent"
+        type: string
+      - variable: codeModules.resources.limits.cpu
+        label: "CPU resource limits"
+        description: "Defines the maximum provided CPU for the OneAgent"
+        type: string
+      - variable: codeModules.resources.limits.memory
+        label: "Memory resource limits"
+        description: "Defines the maximum provided memory for the OneAgent"
+        type: string
 
   #################### Infra Monitoring (OPTIONAL) ####################
 
@@ -169,29 +162,22 @@ questions:
         description: "If set the immutable OneAgent image will be used"
         default: false
         type: boolean
-      - variable: infraMonitoring_use_custom_limits_settings
-        label: "Use custom limits settings"
-        description: "Use custom resource limits for the Dynatrace OneAgent"
-        default: false
-        type: boolean
-        show_subquestion_if: true
-        subquestions:
-          - variable: infraMonitoring.resources.requests.cpu
-            label: "CPU resource request"
-            description: "Defines the minimum requested CPU by the OneAgent"
-            type: string
-          - variable: infraMonitoring.resources.requests.memory
-            label: "Memory resource request"
-            description: "Defines the minimum requested memory by the OneAgent"
-            type: string
-          - variable: infraMonitoring.resources.limits.cpu
-            label: "CPU resource limits"
-            description: "Defines the maximum provided CPU for the OneAgent"
-            type: string
-          - variable: infraMonitoring.resources.limits.memory
-            label: "Memory resource limits"
-            description: "Defines the maximum provided memory for the OneAgent"
-            type: string
+      - variable: infraMonitoring.resources.requests.cpu
+        label: "CPU resource request"
+        description: "Defines the minimum requested CPU by the OneAgent"
+        type: string
+      - variable: infraMonitoring.resources.requests.memory
+        label: "Memory resource request"
+        description: "Defines the minimum requested memory by the OneAgent"
+        type: string
+      - variable: infraMonitoring.resources.limits.cpu
+        label: "CPU resource limits"
+        description: "Defines the maximum provided CPU for the OneAgent"
+        type: string
+      - variable: infraMonitoring.resources.limits.memory
+        label: "Memory resource limits"
+        description: "Defines the maximum provided memory for the OneAgent"
+        type: string
 
   #################### ClassicFullStack (OPTIONAL) ####################
 
@@ -250,29 +236,22 @@ questions:
         description: "If set the immutable OneAgent image will be used"
         default: false
         type: boolean
-      - variable: classicFullStack_use_custom_limits_settings
-        label: "Use custom limits settings"
-        description: "Use custom resource limits for the Dynatrace OneAgent"
-        default: false
-        type: boolean
-        show_subquestion_if: true
-        subquestions:
-          - variable: classicFullStack.resources.requests.cpu
-            label: "CPU resource request"
-            description: "Defines the minimum requested CPU by the OneAgent"
-            type: string
-          - variable: classicFullStack.resources.requests.memory
-            label: "Memory resource request"
-            description: "Defines the minimum requested memory by the OneAgent"
-            type: string
-          - variable: classicFullStack.resources.limits.cpu
-            label: "CPU resource limits"
-            description: "Defines the maximum provided CPU for the OneAgent"
-            type: string
-          - variable: classicFullStack.resources.limits.memory
-            label: "Memory resource limits"
-            description: "Defines the maximum provided memory for the OneAgent"
-            type: string
+      - variable: classicFullStack.resources.requests.cpu
+        label: "CPU resource request"
+        description: "Defines the minimum requested CPU by the OneAgent"
+        type: string
+      - variable: classicFullStack.resources.requests.memory
+        label: "Memory resource request"
+        description: "Defines the minimum requested memory by the OneAgent"
+        type: string
+      - variable: classicFullStack.resources.limits.cpu
+        label: "CPU resource limits"
+        description: "Defines the maximum provided CPU for the OneAgent"
+        type: string
+      - variable: classicFullStack.resources.limits.memory
+        label: "Memory resource limits"
+        description: "Defines the maximum provided memory for the OneAgent"
+        type: string
 
   #################### Kubernetes Monitoring (OPTIONAL) ####################
 
@@ -344,29 +323,22 @@ questions:
         default: ""
         type: string
         show_if: "showKubernetesMonitoringCustomPropertiesSource=ValueFrom"
-      - variable: kubernetesMonitoring_use_custom_limits_settings
-        label: "Use custom limits settings"
-        description: "Use custom resource limits for the Kubernetes Monitoring ActiveGate"
-        default: false
-        type: boolean
-        show_subquestion_if: true
-        subquestions:
-          - variable: kubernetesMonitoring.resources.requests.cpu
-            label: "CPU resource request"
-            description: "Defines the minimum requested CPU by the ActiveGate"
-            type: string
-          - variable: kubernetesMonitoring.resources.requests.memory
-            label: "Memory resource request"
-            description: "Defines the minimum requested memory by the ActiveGate"
-            type: string
-          - variable: kubernetesMonitoring.resources.limits.cpu
-            label: "CPU resource limits"
-            description: "Defines the maximum provided CPU for the ActiveGate"
-            type: string
-          - variable: kubernetesMonitoring.resources.limits.memory
-            label: "Memory resource limits"
-            description: "Defines the maximum provided memory for the ActiveGate"
-            type: string
+      - variable: kubernetesMonitoring.resources.requests.cpu
+        label: "CPU resource request"
+        description: "Defines the minimum requested CPU by the ActiveGate"
+        type: string
+      - variable: kubernetesMonitoring.resources.requests.memory
+        label: "Memory resource request"
+        description: "Defines the minimum requested memory by the ActiveGate"
+        type: string
+      - variable: kubernetesMonitoring.resources.limits.cpu
+        label: "CPU resource limits"
+        description: "Defines the maximum provided CPU for the ActiveGate"
+        type: string
+      - variable: kubernetesMonitoring.resources.limits.memory
+        label: "Memory resource limits"
+        description: "Defines the maximum provided memory for the ActiveGate"
+        type: string
 
 
   #################### Routing (OPTIONAL) ####################
@@ -439,26 +411,19 @@ questions:
         default: ""
         type: string
         show_if: "showRoutingCustomPropertiesSource=ValueFrom"
-      - variable: routing_use_custom_limits_settings
-        label: "Use custom limits settings"
-        description: "Use custom resource limits for the routing ActiveGate"
-        default: false
-        type: boolean
-        show_subquestion_if: true
-        subquestions:
-          - variable: routing.resources.requests.cpu
-            label: "CPU resource request"
-            description: "Defines the minimum requested CPU by the ActiveGate"
-            type: string
-          - variable: routing.resources.requests.memory
-            label: "Memory resource request"
-            description: "Defines the minimum requested memory by the ActiveGate"
-            type: string
-          - variable: routing.resources.limits.cpu
-            label: "CPU resource limits"
-            description: "Defines the maximum provided CPU for the ActiveGate"
-            type: string
-          - variable: routing.resources.limits.memory
-            label: "Memory resource limits"
-            description: "Defines the maximum provided memory for the ActiveGate"
-            type: string
+      - variable: routing.resources.requests.cpu
+        label: "CPU resource request"
+        description: "Defines the minimum requested CPU by the ActiveGate"
+        type: string
+      - variable: routing.resources.requests.memory
+        label: "Memory resource request"
+        description: "Defines the minimum requested memory by the ActiveGate"
+        type: string
+      - variable: routing.resources.limits.cpu
+        label: "CPU resource limits"
+        description: "Defines the maximum provided CPU for the ActiveGate"
+        type: string
+      - variable: routing.resources.limits.memory
+        label: "Memory resource limits"
+        description: "Defines the maximum provided memory for the ActiveGate"
+        type: string
